# echo-tts-cpp

./: .gitignore  LICENSE  README.md
.github/workflows/: release.yml
cpp/: .gitignore  CMakeLists.txt  DEBUG_FINDINGS.md
cpp/src/: echo_audio.cpp  echo_audio.h  echo_dac_onnx.cpp  echo_dac_onnx.h  echo_model.cpp  echo_model.h  echo_pca.cpp  echo_pca.h  echo_pipeline.cpp  echo_pipeline.h  echo_postprocess.cpp  echo_postprocess.h  echo_sampler.cpp  echo_sampler.h  echo_server.cpp  echo_server.h  echo_tokenizer.cpp  echo_tokenizer.h  main.cpp
examples/: README.md
scripts/: export_dac_onnx.py  export_gguf.py  package_portable.ps1
